[package]
name = "pkgsmgr"
version = "0.1.0"
edition = "2024"

[dependencies]
async-compression = { version = "0.4.34", features = ["tokio", "zstd"] }
blake3 = "1.8.2"
clap = { version = "4.5.53", features = ["derive"] }
futures-util = { version = "0.3.31" }
nix = { version = "0.30.1", features = ["fs"] }
reqwest = { version = "0.12.24", features = ["stream"] }
tokio = { version = "1.48.0", features = ["macros", "rt", "rt-multi-thread"] }
tokio-util = { version = "0.7.17", features = ["io"] }

[profile.release]
lto = true
strip = true
