[package]
name = "pkgsmgr"
version = "0.1.0"
edition = "2024"

[dependencies]
async-compression = { version = "0.4.34", features = ["tokio", "zstd"] }
blake3 = "1.8.2"
clap = { version = "4.5.53", features = ["derive"] }
futures-util = { version = "0.3.31" }
hex = "0.4.3"
nix = { version = "0.30.1", features = ["fs"] }
reqwest = { version = "0.13.1", features = ["stream"] }
temp-file = "0.1.9"
tokio = { version = "1.48.0", features = ["fs", "macros", "rt", "rt-multi-thread"] }
tokio-util = { version = "0.7.17", features = ["io"] }
walkdir = "2.5.0"
xxh3 = "0.1.1"
xxhash-rust = { version = "0.8.15", features = ["std", "xxh3"] }

[profile.release]
lto = true
strip = true
